Issue #10: expand/collapse functionality for keyboard shortcut list. Still need to make it compatible with smaller screens.

--- a/css/src/styles.sass
+++ b/css/src/styles.sass
@@ -31,26 +31,38 @@ body
       -webkit-background-clip: text
       -webkit-text-fill-color: transparent
       text-shadow: 0 1px 1px hsla(0, 0%, 0%, 0.15)
-  .shortcut
-    @include roboto
-    padding: 10px
-    .combination
-      .key
-        padding: 2px 4px
-        border: 1px solid #101010
-        border-radius: 3px
-        background-color: #222
-        color: #ddd
-        box-shadow: inset 0 1px 1px hsla(0, 0%, 100%, 0.1), 0 1px 2px hsla(0, 0%, 0%, 0.5)
-    .description
-      float: right
+  #shortcut-list-wrapper
+    margin-bottom: 1em
+    #shortcut-list
+      overflow: hidden
+      .shortcut
+        @include roboto
+        padding: 10px
+        .combination
+          .key
+            padding: 2px 4px
+            border: 1px solid #101010
+            border-radius: 3px
+            background-color: #222
+            color: #ddd
+            box-shadow: inset 0 1px 1px hsla(0, 0%, 100%, 0.1), 0 1px 2px hsla(0, 0%, 0%, 0.5)
+        .description
+          float: right
+    .toggle
+      @include roboto
+      padding: 4px
+      cursor: pointer
+      text-align: center
+      text-transform: uppercase
+      font-size: 0.75em
   #scribbli-list
     border-radius: 2px
     @include roboto
     padding: 10px
-    margin: 1em 10px 10px
+    margin: 0 10px
+    -moz-box-sizing: border-box
+    box-sizing: border-box
     background-color: $light-blue
-    max-height: 200px
     overflow-y: scroll
     .new-scribbli// TODO: a lot of duplicate styles here
       padding: 10px// TODO: atomicize things like this
@@ -113,6 +125,7 @@ body
     text-align: center
     padding: 10px
     width: 100%
+    -moz-box-sizing: border-box
     box-sizing: border-box
     background-color: $lighter-blue
     a
